test/domains/compilerErrors/notsupportedOpBy-assoc.chpl

var dfltAssociativeBase = {1, 3, 4};
writeln(dfltAssociativeBase by 1);
