test/domains/compilerErrors/notsupportedOpBy-assoc.good
notsupportedOpBy-assoc.chpl:3: error: cannot apply 'by' to associative and sparse domains
